--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                 rationalism, equality and humbleness.
             </p>
             <p>
-                I strongly belive that our methods our software development will
+                I strongly belive that our methods of software development will
                 change soon because of the 'exponential hangover' and that we
                 should find reliable ways to use parallelism. I see functional
                 programming as one of the solutions for the future problems.
