--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                 <li>Cisco</li>
             </ul>
             <p>
-                What is interesting to me:
+                What I'm interested in:
             </p>
             <ul>
                 <li>Electron</li>
