--- a/meowse.html
+++ b/meowse.html
@@ -4,13 +4,38 @@
         <meta charset="utf-8">
         <title>Meowse</title>
         <script src="https://code.jquery.com/jquery-1.12.0.min.js"></script>
-        <script src="jquery.morse.js" charset="utf-8"></script>
+        <script src="morsecode.js" charset="utf-8"></script>
     </head>
-    <body>
-        <form action="demo_form.asp">
-         First name: <input type="text" name="fname"><br>
-         Last name: <input type="text" name="lname"><br>
-         <input type="submit" value="Submit">
-        </form> 
+    <body style="padding: 20px;">
+        <h1>Human language to cat language translator Alpha</h1>
+         <p>Human Text</p>
+         <textarea type="text" id="text"></textarea>
+         <p>Meowse</p>
+         <textarea type="text" id="meow"></textarea>
+         <br>
+         <button id="humanCatBtn">Human -> Cat</button>
     </body>
+    <script type="text/javascript">
+        $('#humanCatBtn').click(function() {
+            var morse = new MorseCode();
+            let text = $('#text').val();
+            let encodedArray = text.split(" ").map(function(word) {
+                return morse.translate(word);
+            });
+            let encoded = encodedArray.join(" ");
+            let meowcoded = morseToMeow(encoded);
+            $('#meow').val(meowcoded);
+        })
+
+        function morseToMeow(morse) {
+            while (morse.indexOf(".") > -1) {
+                morse = morse.replace(".", "meow");
+            }
+            while (morse.indexOf("_") > -1) {
+                morse = morse.replace("_", "meoow");
+            }
+            return morse;
+        }
+
+    </script>
 </html>
