Change interests a bit

--- a/index.html
+++ b/index.html
@@ -41,16 +41,17 @@
                 <li>iOS</li>
                 <li>JS</li>
                 <li>Node</li>
-                <li>Android (in the past)</li>
-                <li>Cisco</li>
+                <li>Android</li>
+                <li>Cisco &amp; other networking</li>
             </ul>
             <p>
                 What I'm interested in:
             </p>
             <ul>
-                <li>Electron</li>
+                <li>FP</li>
+                <li>FRP</li>
+                <li>Type systems</li>
                 <li>Rust</li>
-                <li>Lisp</li>
                 <li>Urbanism</li>
                 <li>Minimalism</li>
                 <li>Engineering culture</li>
