--- a/test-framework.html
+++ b/test-framework.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title></title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
   </head>
   <body>
     <button type="button" id="btn_request_vk_auth">VK auth</button>
