Update main page

--- a/index.html
+++ b/index.html
@@ -39,8 +39,7 @@
             </p>
             <ul>
                 <li>iOS</li>
-                <li>JS</li>
-                <li>Node</li>
+                <li>ECMAScript && Node.js</li>
                 <li>Android</li>
                 <li>Cisco &amp; other networking</li>
             </ul>
@@ -51,13 +50,15 @@
                 <li>FP</li>
                 <li>FRP</li>
                 <li>Type systems</li>
-                <li>Rust</li>
+                <li>App state management</li>
                 <li>Urbanism</li>
                 <li>Minimalism</li>
                 <li>Engineering culture</li>
+                <li>Privacy</li>
+                <li>Libre software</li>
             </ul>
             <p>
-                Links
+                Links:
             </p>
             <ul>
                 <li>Twitter: <a href="https://twitter.com/charlag_khan">@charlag_khan</a></li>
@@ -71,7 +72,10 @@
             <hr>
 
             <p>
-                Copyright ⓒ 2016 Ivan Kupalov
+                Content: Copyright ⓒ 2018 Ivan Kupalov
+            </p>
+            <p>
+                Code: <a href="https://www.gnu.org/licenses/gpl-3.0.en.html">GNU GPLv3</a>
             </p>
         </div>
     </body>
