Fix function name in Uposatha

--- a/uposatha.html
+++ b/uposatha.html
@@ -147,7 +147,7 @@
      }
 
      function isUposatha(yesterdayPhase, todayPhase) {
-         return todayPhase != yesterdayPhase && isUposathaDay(todayPhase);
+         return todayPhase != yesterdayPhase && isUposathaPhase(todayPhase);
      }
 
      function imageForPhase(phase) {
