--- a/index.html
+++ b/index.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
     <head>
         <meta charset="utf-8">
-        <title>Ivan Kupalov</title>
+        <title>charlag</title>
         <link rel="stylesheet" href="index.css" media="screen" title="no title" charset="utf-8">
     </head>
     <body>
-        <div class="main-container">
-            <h1 class="header">Ivan Kupalov</h1>
+        <div class="main-container" role="main">
+            <h1 class="header">charlag</h1>
             <p>
                 The big part of me is making things. I rarely can spend few days
                  without trying out some idea or new technology. At the same time
@@ -17,7 +17,7 @@
             </p>
             <p>
                 I prefer to learn things myself but I love to have a mentor which
-                I can bother.
+                I can bother. I never have one so I learn things myself.
             </p>
             <p>
                 Despite the fact that I was born in Russia I don't identify myself
@@ -38,10 +38,10 @@
                 What I did:
             </p>
             <ul>
+                <li>Android</li>
                 <li>iOS</li>
                 <li>ECMAScript && Node.js</li>
-                <li>Android</li>
-                <li>Cisco &amp; other networking</li>
+                <li>Networking</li>
             </ul>
             <p>
                 What I'm interested in:
@@ -57,22 +57,12 @@
                 <li>Privacy</li>
                 <li>Libre software</li>
             </ul>
-            <p>
-                Links:
-            </p>
-            <ul>
-                <li>Twitter: <a href="https://twitter.com/charlag_khan">@charlag_khan</a></li>
-                <li>Github: <a href="https://github.com/charlag">charlag</a></li>
-                <li>Facebook: <a href="https://www.facebook.com/charlag.khan">Ivan Kupalov</a></li>
-                <li>LinkedIn: <a href="https://www.linkedin.com/in/ivan-kupalov-737b07a6?trk=hp-identity-name">Ivan Kupalov</a></li>
-            </ul>
-
-            <img class="photo" src="photo.jpg"/>
+	    <img class="photo" src="photo.jpg" alt="Photo of a young man in a VR headset"/>
 
             <hr>
 
             <p>
-                Content: Copyright ⓒ 2018 Ivan Kupalov
+                Content: Copyright ⓒ 2018 charlag
             </p>
             <p>
                 Code: <a href="https://www.gnu.org/licenses/gpl-3.0.en.html">GNU GPLv3</a>
