--- a/shrine/index.html
+++ b/shrine/index.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
     <head>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" type="text/css" href="index.css">
+	<title>digital shrine</title>
     </head>
-    <body>
-        <img src="buddha.jpeg" class="img" />
+    <body role="main">
+        <img src="buddha.jpeg" class="img" alt="Floating pixel Buddha"/>
     </body>
 </html>
